--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <!-- Responsive -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Boot-Strap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- Il mio foglio di stile -->
     <link rel="stylesheet" href="CSS/stylesheet.css">
     <title>JS-Biglietto Treno</title>
@@ -12,12 +15,52 @@
 
 <body>
 
-    <h3 id="final_price">
+    <main class="ms_bg-red">
 
-    </h3>
-    <input type="text" id="age">
-    <input type="number" id="km">
-    <button id="genera"> </button>
+        <section> <!--Sezione per calcolare il proprio biglietto-->
+            <!-- Titolo sezione -->
+            <h2 class="text-white text-center fw-bold py-3">CALCOLA IL PREZZO DEL TUO BIGLIETTO</h2>
+            <div class="container">
+
+                <form class="row text-center justify-content-center bg-white rounded-3 border-1">
+                    <!-- Parte con i dati da inserire dall'utente -->
+                    <div class="col-3">
+                        <label class="ms_color-soft-red py-3 ms_fw-600">Nome Cognome</label>
+                        <input class="form-control ms_border-color" type="text"
+                            placeholder="Inserisci il tuo nome e cognome">
+                    </div>
+                    <div class="col-3">
+                        <label class="ms_color-soft-red py-3 ms_fw-600">Km da percorrere</label>
+                        <input class="form-control ms_border-color" type="number" id="km"
+                            placeholder="Inserisci i km da percorrere">
+                    </div>
+                    <div class="col-3">
+                        <label class="ms_color-soft-red py-3 ms_fw-600">Fascia d'et&agrave;</label>
+                        <select class="form-select ms_border-color" id="age" aria-label="Default select example">
+                            <option>Seleziona la tua fascia d'et&agrave;</option>
+                            <option value="1">Minorenne</option>
+                            <option value="2">Maggiorenne</option>
+                            <option value="3">Over 65</option>
+                        </select>
+                    </div>
+
+                    <!-- Parte con i button -->
+                    <div class="col-12 pt-5 pb-3">
+                        <button id="genera" class="rounded-3 p-1 border-1 border-dark"><span
+                                class="ms_color-soft-red fw-bolder">Genera</span></button>
+
+                        <button id="annulla" class="rounded-3 p-1 border-1 border-dark"><span
+                                class="ms_color-soft-red fw-bolder">Annulla</span></button>
+                    </div>
+
+                </form>
+
+            </div>
+
+        </section>
+
+    </main>
+
 
     <script src="JS/script.js">
 
