--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <div class="col-3">
                         <label class="ms_color-soft-red py-3 ms_fw-600">Nome Cognome</label>
                         <input class="form-control ms_border-color" type="text"
-                            placeholder="Inserisci il tuo nome e cognome">
+                            placeholder="Inserisci il tuo nome e cognome" id="nome1">
                     </div>
                     <div class="col-3">
                         <label class="ms_color-soft-red py-3 ms_fw-600">Km da percorrere</label>
